maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:7: error: not found: value random
nombre = random() 
         ^RandomMouseMaze:9: error: type mismatch;
 found   : Unit
 required: Boolean
if (nombre=0)
          ^RandomMouseMaze:13: error: type mismatch;
 found   : Unit
 required: Boolean
if (nombre=1)
          ^RandomMouseMaze:17: error: type mismatch;
 found   : Unit
 required: Boolean
if (nombre=2)
          ^