maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() 
{
var nombre = 0
while(!estSurBiscuit)
{
nombre = random() 
}
if (nombre=0)
{
avance();
}
if (nombre=1)
{
	droite();
}
if (nombre=2)
{
 gauche();	

}
}
